--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.28",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -15,6 +17,10 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
+    "vue-axios": "^3.2.4",
+    "vue-cli-plugin-element-plus": "^0.0.13"
   }
 }
